codestyle: StandardCharsets.UTF_8 (Java 10)